[package]
name = "NEON"
author = "tales.bouchardet"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_Networking_WinHttp", "Win32_NetworkManagement_WindowsFirewall", "Win32_System_LibraryLoader", "Win32_NetworkManagement_NetManagement"] }
ico = "0.3"
winreg = "0.55.0"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "naoeonixie"
path = "main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
overflow-checks = false
debug-assertions = false