[package]
name = "NEON"
version = "1.0.0"
edition = "2021"

[dependencies]
web-view = { version = "0.7.3"}
windows = { version = "0.61.3", features = ["Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System", "Win32_System_Com", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_Networking_WinHttp", "Win32_NetworkManagement_WindowsFirewall", "Win32_System_LibraryLoader", "Win32_NetworkManagement_NetManagement", "Win32_System_Services"] }
ico = "0.4.0"
winreg = "0.55.0"
serde_json = "1.0"
win-screenshot = "4.0.13"
image = "0.25.6"
regex = "1.11.2"
arboard = "3.6.1"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "naoeonixie"
path = "main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
overflow-checks = false
debug-assertions = false


